--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
 .cardDiv{
   width: 300px;
 }
+
+.cardDiv:hover {
+  background-color: aquamarine;
+}
 .cardImg{
   width: 300px;
 }
@@ -15,3 +19,4 @@ body{
   display: flex;
   flex-wrap: wrap;
 }
+
